# CNNFeatureExtraction-reproduction

./: CMakeLists.txt  README.md  makefile
files/: keyA  keyB  parties_LAN_3PC  parties_WAN_3PC
src/: Functionalities.cpp  Functionalities.h  ParallelAESObject.cpp  ParallelAESObject.h  basicSockets.cpp  connect.cpp  connect.h  globals.h  main.cpp  secondary.cpp  secondary.h  tools.cpp  tools.h
util/: TedKrovetzAesNiWrapperC.cpp
